html/themes/materialize/css/cards.css
.card.first-level {
    margin-top: 0;
    max-height: calc(100vh - 134px);
}

.card-content.first-level {
    max-height: inherit;
    overflow: auto;
}

.card h2.card-title {
    font-size: 20px;
    font-weight: bold;
    margin: 0 0 8px 0;
}

.card h3.card-title {
    font-size: 18px;
    margin: 8px 0;
}

.card .card-content hr {
    margin-bottom: 20px;
}

.card .card-content .card-action {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    align-content: center;
    justify-content: flex-end;
    align-items: center;
    padding: 20px 10px 0px 10px;
    border-top: none;
}

.card .card-content .card-action button {
    margin-left: 20px;
    font-size: 12px;
    text-transform: none;
}

.card-content .card {
    /* height: 172px; */
    min-height: 172px;
    padding: 20px;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
}

.card-content .card .card-image {
    height: 30px;
}

.card-content .card .card-stacked {
    height: 120px;
}

.card-content .card .card-content {
    padding: 0;
    overflow: hidden;
    text-overflow: ellipsis;
}

.card-content .card .card-content .card-title {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.card-content .card .card-content p {
    overflow: hidden;
    display: -webkit-box;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 4;
}

.card .card-content .card-action {
    padding: 20px 0px 0px 0px;
}

.card .card-content .card-action .row {
    margin: 0;
}

